# rdmulti

./: README.md
R/: rdmcplot_illustration.R  rdmulti_illustration.R  simdata_cumul.csv  simdata_multis.csv
R/rdmulti/: DESCRIPTION  NAMESPACE  rdmulti.Rproj
R/rdmulti/.Rproj.user/77175A1D/: persistent-state
R/rdmulti/.Rproj.user/77175A1D/pcs/: files-pane.pper  windowlayoutstate.pper
R/rdmulti/.Rproj.user/77175A1D/sources/per/t/: 3F3D05EC  3F3D05EC-contents
R/rdmulti/.Rproj.user/77175A1D/sources/prop/: 293F497E  C0C663B2  INDEX
R/rdmulti/.Rproj.user/shared/notebooks/: paths
R/rdmulti/R/: rdmc.R  rdmcplot.R  rdms.R  rdmulti_package.R
R/rdmulti/man/: rdmc.Rd  rdmcplot.Rd  rdms.Rd  rdmulti-package.Rd
python/: rdmulti_illustration.py  simdata_multic.csv
python/rdmulti/: README.md  ToBuild.txt  setup.cfg
python/rdmulti/src/rdmulti/: __init__.py  rdmc.py  rdmcplot.py  rdms.py
python/rdmulti/src/rdmulti.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/rdmulti/: rdmcplot.py
python/src/rdmulti.egg-info/: PKG-INFO
stata/: rdmc.ado  rdmc.sthlp  rdmcplot.ado  rdmcplot.sthlp  rdmcplot_illustration.do  rdms.ado  rdms.sthlp  rdmulti.pkg  rdmulti_illustration.do  simdata_cumul.dta  simdata_generate.do  simdata_multic.dta  simdata_multis.dta  stata.toc
