[metadata]
name = rdmulti
version = 1.0.1
author = Ricardo Masini
author_email = rmasini@ucdavis.edu
description =  Analysis of RD Designs with multiple cutoffs or scores
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdpackages/rdmulti
project_urls = 
    Bug Tracker = https://github.com/rdpackages/rdmulti/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas>=2.0.0
    scipy
    rdrobust>=1.1.1

[options.packages.find]
where = src